--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 
     <!-- Llamada reseteo de estilos default: public/css/main.css  -->
     <link rel="stylesheet" href="./css/main.css" />
-    
+
     <style>
-      /* Estilos adicionales para el hover */
+      /* Estilos para la imagen */
       .image {
-        transition: transform 0.3s ease;
+        transition: transform 0.3s ease; /* Esto permite el efecto suave */
       }
+
+      /* Estilo de hover que quieres aplicar */
       .hover {
         transform: scale(1.1); /* Aumenta el tamaño de la imagen */
       }
@@ -32,9 +34,11 @@
     <script src="https://public.flourish.studio/resources/embed.js"></script>
 
     <script>
-      // Activar la clase hover automáticamente después de 2 segundos
+      // Cuando la ventana se carga, aplicamos el hover a la imagen automáticamente
       window.onload = function() {
         const image = document.getElementById('myImage');
+        
+        // Espera 2 segundos antes de aplicar el hover
         setTimeout(function() {
           image.classList.add('hover');
         }, 2000);  // 2000 milisegundos = 2 segundos
